--- a/Robotic.WebUI/Views/ProductManager/Edit.cshtml
+++ b/Robotic.WebUI/Views/ProductManager/Edit.cshtml
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.No, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.No, "", new { @class = "text-danger" })
             </div>
         </div>
