--- a/Robotic.WebUI/Views/ProductManager/UseProduct.cshtml
+++ b/Robotic.WebUI/Views/ProductManager/UseProduct.cshtml
@@ -145,27 +145,29 @@
 
     <div class="form-group">
         <div align="center">
-            <input type="submit" value="ใช้ไม้" class="btn btn-default" />
+            @*<input type="submit" value="ใช้ไม้" class="btn btn-default" />*@
+            <a class="btn btn-default" data-toggle="modal" data-target=".bootstrapmodal">ใช้ไม้</a>
+            <div class="modal fade bootstrapmodal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-heaader">
+                            <button data-dismiss="modal" class="close"><span>&times;</span></button>
+                            <div class="modal-title">SBS</div>
+                        </div>
+                        <div class="modal-body">
+                            <p>ยืนยันการใช้?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <input type="submit" value="ใช้ไม้" class="btn btn-default" />
+                        </div>
+
+                    </div>
+                </div>
+            </div>
             @Html.ActionLink("กลับ", "Index", null, new { @type = "submit", @class = "btn btn-default" })
         </div>
     </div>
-    @*<a class="btn btn-success" data-toggle="modal" data-target=".bootstrapmodal">POP</a>
-    <div class="modal fade bootstrapmodal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-heaader">
-                    <button data-dismiss="modal" class="close"><span>&times;</span></button>
-                    <div class="modal-title">SBS</div>
-                </div>
-                <div class="modal-body">
-                    <p>ยืนยันการใช้?</p>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" value="ใช้ไม้" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    </div>*@
+    
 </div>
 }
 
